--- a/app/styles/_pokemon.scss
+++ b/app/styles/_pokemon.scss
@@ -16,6 +16,52 @@
     background-repeat: no-repeat;
 }
 
+.battleButtons {
+    @extend .battleScene;
+
+    min-height: 200px;
+
+    border-radius: 15px;
+
+    background-image: url('../images/battletextbox.png');
+
+    .buttonTable {
+
+        width: 100%;
+        min-height: 200px;
+        padding: 15px;
+
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+
+        td {
+            padding: 15px;
+            text-align: center;
+            width: 50%;
+            height: 50%;
+
+            font-size: 25px;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
+.player {
+    position: absolute;
+    top: 220px;
+    left: 100px;
+}
+
+.wild {
+    position: absolute;
+    top: 90px;
+    right: 100px;
+}
+
 .pokemonContainer {
 
     position: relative;
@@ -29,18 +75,56 @@
             background-repeat: no-repeat;
         }
     }
+}
 
-    .player {
-        position: absolute;
-        top: 220px;
-        left: 100px;
-        transform: rotateY(180deg); /* Standard syntax */
+//Animations for the pokemon container
+.pokemonContainer.ng-hide-remove {
+    @extend .animated;
+    @extend .lightSpeedIn;
+}
+
+.pokemonContainer.ng-hide-add {
+    @extend .animated;
+    @extend .bounceOut;
+}
+
+.meter {
+
+    width: 200px;
+	height: 20px;  /* Can be anything */
+	background: #555;
+	-moz-border-radius: 25px;
+	-webkit-border-radius: 25px;
+	border-radius: 25px;
+	padding: 10px;
+	box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+
+    span {
+
+      display: block;
+      height: 100%;
+      border-top-right-radius: 8px;
+      border-bottom-right-radius: 8px;
+      border-top-left-radius: 20px;
+      border-bottom-left-radius: 20px;
+      background-color: rgb(43,194,83);
+      box-shadow:
+        inset 0 2px 9px  rgba(255,255,255,0.3),
+        inset 0 -2px 6px rgba(0,0,0,0.4);
+      position: absolute;
+      overflow: hidden;
+      top: 0px;
+      left: 0px;
+      transition: width 1s;
+
+      .yellow {
+
+      }
+
+      .red {
+          background-color: #f0a3a3;
+          background-image: linear-gradient(to bottom, #f0a3a3, #f42323);
+      }
+
     }
-
-    .wild {
-        position: absolute;
-        top: 90px;
-        right: 100px;
-    }
-
 }
