--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,7 @@
 
 <div class = "center">
     <button
+    class = "musicButton"
     ng-audio="../songs/redblue.mp3"
     volume="0.5"
     loop="true">Music?</button>
