--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -1,5 +1,8 @@
 
 //Variables where we define our colors and things
+$standard: #313131;
+$standardInverse: #c5d5d5;
+$navBg: #7352e6;
 $sky: #01addf;
 $grass: #55d456;
 $transparent: transparent;
