Fixed Up the backend, with error handler
WAYYYYYY cleaner now, and works beautifully. But again, please don't judge my node skills

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -43,7 +43,7 @@ ng-show="enemyHealth.hp">A wild {{enemy.name}} has appeared!</h1>
         ng-show = "playerHealth.hp > 0"
         ng-src="{{player.spriteUrl}}"
         alt = "Go Pokemon!"
-        class = "pokemon flipped flipInY"/>
+        class = "pokemon flipInY"/>
     </div>
 
 </div>
