Started creating a reset button!

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -2,7 +2,7 @@
 //Variables where we define our colors and things
 $standard: #313131;
 $standardInverse: #c5d5d5;
-$navBg: #7352e6;
+$navBg: #EAEAEA;
 $sky: #01addf;
 $grass: #55d456;
 $transparent: transparent;
