--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,7 +9,7 @@
 
 <h1
 class = "center"
-ng-show="enemyHealth.hp">A wild <i>{{enemy.name}}</i> has appeared!</h1>
+ng-show="enemyHealth.hp">A wild {{enemy.name}} has appeared!</h1>
 
 <!-- Our Scene -->
 <div class="battleScene">
@@ -48,7 +48,15 @@ ng-show="enemyHealth.hp">A wild <i>{{enemy.name}}</i> has appeared!</h1>
 
 </div>
 
+<!-- Our Battle Message -->
 <h2 class = "center">{{message}}</h2>
+
+<!-- Play Again? -->
+<h2 class = "center">
+    <a ng-click="resetPokemon()">
+        Would you like to play again?
+    </a>
+</h2>
 
 <!-- Our Selectable Moves -->
 <div class="battleButtons">
