Fixed up the navbar for mobile, and added an about page

--- a/app/styles/_colors.scss
+++ b/app/styles/_colors.scss
@@ -3,6 +3,7 @@
 $standard: #313131;
 $standardInverse: #c5d5d5;
 $navBg: #EAEAEA;
+$navBgActive: #CCCCCC;
 $sky: #01addf;
 $grass: #55d456;
 $transparent: transparent;
