--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -32,12 +32,25 @@ body {
     padding-left: 20px;
     margin-bottom: 20px;
     box-shadow: 0px 4px 8px $standard;
+    border: 0px !important;
+
+    .nav {
+        padding-right: 10px !important;
+    }
+
+    .collapse {
+        border-top: 0px !important;
+    }
 
     a {
         color: $standard !important;
         margin-left: 5px;
         margin-right: 5px;
 
+    }
+
+    .activeTab {
+        background-color: $navBgActive;
     }
 
     //Shadow to look material
