--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -22,6 +22,6 @@
 
         <ul class="nav navbar-nav">
           <li ng-class="{activeTab:isActive('/')}"><a class = "navText" href="#/">Home</a></li>
-          <li ng-class="{activeTab:isActive('/signup')}"><a class = "navText" ng-href="#/signup">About</a></li>
+          <li ng-class="{activeTab:isActive('/about')}"><a class = "navText" ng-href="#/about">About</a></li>
         </ul>
 </div>
