Created an about page descriptiono

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,30 @@
-<p>This is the about view.</p>
+<h1 class = "center">Angularmon</h1>
+
+<div class = "card">
+    <p>
+        Angularmon is a simple little pokemon simulator
+        built in
+        <a href = "https://angularjs.org/">AngularJS</a>
+        that grabs data from
+        <a href = "http://pokeapi.co/">PokéApi</a> to grab
+        a pokemon's info (Such as name, pokedex info, etc...)
+        and 4 moves that the pokemon can learn to create
+        randomized pokemon battles. This is all returned
+        to the client from a
+        <a href = "https://nodejs.org/en/">NodeJs</a>
+        backend that interfaces with the api.
+        <br>
+        <br>
+        This app/game/simulator was developed by
+        <a href = "https://aaronthedev.com/#/">Aaron Turner</a>,
+        and all rights are reserved to
+        <a href = "http://www.nintendo.com/">Nintendo</a>
+        and
+        <a href = "http://www.gamefreak.co.jp/">Gamefreak</a>.
+        This was not built to compete or against them or
+        Pokémon, as I am quite the fan, and this was made for
+        fun. This was also built very quickly, and as a little
+        api experiment, so the code is a bit messy, but I hope
+        you enjoy!
+    </p>
+</div>
