FInished up the loading spinner
Working great, with error checking

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -5,8 +5,9 @@
         Angularmon is a simple little pokemon simulator
         built in
         <a href = "https://angularjs.org/">AngularJS</a>
-        that grabs data from
-        <a href = "http://pokeapi.co/">PokéApi</a> to grab
+        that grabs data from a pokemon api
+        (who ask in their liscence not to use their name) 
+        to grab
         a pokemon's info (Such as name, pokedex info, etc...)
         and 4 moves that the pokemon can learn to create
         randomized pokemon battles. This is all returned
